is_debug = false
target_cpu = "x64"
v8_monolithic = true
v8_static_library = true
use_libfuzzer = false
v8_enable_test_features = ""
symbol_level = 0
is_component_build = false
use_sysroot = false
use_glib = false
use_custom_libcxx = false
use_custom_libcxx_for_host = false
v8_enable_i18n_support = true
icu_use_data_file = false
v8_use_external_startup_data = false
v8_enable_pointer_compression = false
v8_enable_31bit_smis_on_64bit_arch = false
v8_enable_heap_sandbox = false

